# mls-mpm

./: Cargo.toml  LICENSE
docs/: README.md
examples/: benchmark.rs  benchmark_integer.rs  elastic.rs  elastic_integer.rs  explosion.rs  explosion_integer.rs  gravity.rs  gravity_integer.rs  minimal.rs  minimal_integer.rs
examples/plotter/: mod.rs
src/: gpu.rs  interface.rs  lib.rs  mls_mpm.rs  state.rs
src/interface/: grid.rs  material.rs  particle.rs
src/mls_mpm/: dim2.rs
src/mls_mpm/dim2/: kernel.rs
src/mls_mpm/dim2/kernel/: clear_grid.rs  grid_to_particle.rs  particle_to_grid.rs  particle_to_grid_i32_atomic.rs  update_grid.rs
src/state/: atomic.rs  grid.rs  material.rs  particle.rs
